[package]
name = "TaskManager"
description = "A terminal based task manager."
version = "0.8.5"
authors = ["Reem Said, Jana Saleh, Muhammed Azzazy"]
edition = "2021"
repository = "https://github.com/ReemSaidd/TaskManager.git"

[dependencies]
tui = "0.19"
crossterm = "0.25"
unicode-width = "0.1.5"
sysinfo = "0.29.0"
termion = "2.0.1"
nix = "0.26.2"
psutil = "3.2.2"

[[bin]]
doc = false
path = "src/main.rs"
name = "TaskManager"
