[package]
name = "TaskManager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.19"
crossterm = "0.25"
unicode-width = "0.1.5"
sysinfo = "0.29.0"
termion = "2.0.1"
nix = "0.26.2"
psutil = "3.2.2"
ptree = "0.4"

[[bin]]
doc = false
path = "src/main.rs"
name = "TaskManager"
